fix image alignment

--- a/packages/assets/scss/03-organisms/_collection-header.scss
+++ b/packages/assets/scss/03-organisms/_collection-header.scss
@@ -34,8 +34,9 @@
   
   &__image {
     display: none;
-    width: 175px;
-    height: auto;
+    max-width: 175px;
+    min-width: 100px;
+    max-height: 100px;
     margin-left: 1rem;
   
     @media ($bp-small-min) {
